# graphics101-imageprocessing

./: CMakeLists-zip.txt  CMakeLists.txt  README.html  README.md  README.txt  convolution.cpp  convolution.h  imageprocessing.pro  main.cpp
docs/: tex
examples/: imgdiff.py  run_all.HOW  run_all.txt  run_all_gen.py  wave.py
src/: convolution.cpp  convolution.h
